    user interface.

    For general highlights of the changes between releases, see
    HIGHLIGHTS.txt in the same directory as this file.

Version 3.2  [ (under development) ]
    OVERALL:
        - Added file format documentation to reference manual.
    ENGINE:
        Class NBoolSet:
            - Using unsigned chars for byte codes.
        Class NNormalSurface:
            - Added knownCanCrush().
        Class NPerm:
            - Using unsigned chars for permutation codes.
        Class NPrismSpec:
            - New class for dealing with triangular prisms defined by
              slicing along normal quads in a tetrahedron.
        Class NTriangulation:
            - Interface-only skeletal query routines are now also
              implemented in the C++ calculation engine.
    UTILITIES:
        regconcat:
            - New utility for combining several data files.

Version 3.1  [ 18 October, 2002 ]
    OVERALL:
        - Added calculation engine test suite.
        - Environment variables now take precedence over configuration
          files when running the startup script.
        - Build process now uses standard autoconf/automake structure.
    ENGINE:
        Overall structure:
            - Added support for multiple vertex enumeration engines.
        Class NCensus:
            - Redesigned to do its work through classes NFacePairing and
              NGluingPerms.
            - Added support for arbitrary criterion functions.
            - Added support for splitting a census into pieces.
        Class NCompConstraint, NCompConstraintSet:
            - Added.
        Class NConeRay:
            - Removed in favour of new class NRay.
        Class NFacePairing, NGluingPerms:
            - Added to bear the brunt of census generation.
            - Massive optimisations and rewrites throughout census code.
            - Removed all thread yields, which were causing processes to
              have 0.0% CPU time on some systems.