@@ -12,7 +12,7 @@ triangulationincludedir = $(pkgincludedir)/triangulation
 
 noinst_LTLIBRARIES = libtriangulation.la
 
-libtriangulation_la_SOURCES = cover.cpp crushtri.cpp homology.cpp homotopy.cpp hydrate.cpp insertlayered.cpp isomorphic.cpp nedge.cpp nface.cpp nisomorphism.cpp nperm.cpp ntetrahedron.cpp ntriangulation.cpp nvertex.cpp nxmltrireader.cpp simplify.cpp simplifyglobal.cpp skeleton.cpp subdivide.cpp surfaces.cpp
+libtriangulation_la_SOURCES = cover.cpp crushtri.cpp homology.cpp homotopy.cpp hydrate.cpp insertlayered.cpp isomorphic.cpp nedge.cpp nface.cpp nfacepair.cpp nisomorphism.cpp nperm.cpp ntetrahedron.cpp ntriangulation.cpp nvertex.cpp nxmltrireader.cpp simplify.cpp simplifyglobal.cpp skeleton.cpp subdivide.cpp surfaces.cpp
 
-triangulationinclude_HEADERS = nboundarycomponent.h ncomponent.h nedge.h nface.h nisomorphism.h nperm.h npermit.h ntetface.h ntetrahedron.h ntriangulation.h nvertex.h nxmltrireader.h
+triangulationinclude_HEADERS = nboundarycomponent.h ncomponent.h nedge.h nface.h nfacepair.h nisomorphism.h nperm.h npermit.h ntetface.h ntetrahedron.h ntriangulation.h nvertex.h nxmltrireader.h
 
